[package]
name = "q-debug"
version = "0.1.0"
description = "Quick and dirty debugging for tired Rust programmers"
authors = ["Ben Steadman <steadmanben1@gmail.com>"]
homepage = "https://github.com/SteadBytes/q-rs"
license = "MIT"
repository = "https://github.com/SteadBytes/q-rs"
readme = "README.md"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4"

[dev-dependencies]
regex = "1.3.9"
